src/styles.scss
/* Importing Bootstrap SCSS file. */
@import '~bootstrap/scss/bootstrap';

@font-face {
  font-family: geometros;
  src: url(assets/fonts/Geometos.ttf);
  font-display: swap
}

@font-face {
  font-family: NunitoSans;
  src: url(assets/fonts/NunitoSans.ttf);
  font-display: swap
}

.execute-area {
  background-image: url(assets/images/cta.png);
}

.execute-right [type=submit], .execute-right [type=button] {
  background: linear-gradient(90deg, var(--c1, #f597a9), var(--c2, #f597a9) 51%, var(--c1, #FFC001)) var(--x,0)/200%;
  -moz-background: linear-gradient(90deg, var(--c1, #f597a9), var(--c2, #f597a9) 51%, var(--c1, #FFC001)) var(--x,0)/200%;
  -webkit-background: linear-gradient(90deg, var(--c1, #f597a9), var(--c2, #f597a9) 51%, var(--c1, #FFC001)) var(--x,0)/200%;
  color: #fff;
  font-weight: 700;
  transition: .4s all ease
}

.execute-right [type=submit]:hover, .execute-right [type=button]:hover {
  --x: 100%
}

@media screen and (max-width: 767px) {
  .execute-area {
    background-image: url(assets/images/cta-mob.png);
  }
}

.analyse-bg {
  background-image: url(assets/images/contactformulier.png);
}

.check-area {
  background-image: url(assets/images/cta.png);
}

@media screen and (max-width: 767px) {
  .check-area {
    background-image: url(assets/images/cta-mob.png);
  }
}

@media only screen and (max-width: 768px) {
  .navbar-brand {
    background-image: url(https://getbigmarketing.nl/wp-content/uploads/2021/04/Getbig_Logo_Final_Fix_Logo_Volledig_PNG-e1619696062304.png.webp) !important;
  }
  .header_opened .navbar-brand {
    background-image: url(https://getbigmarketing.nl/wp-content/uploads/2021/09/Logo-wit-small-png.png) !important;
  }
}

.login h1 a {
  background-image: url(https://getbigmarketing.nl/wp-content/themes/Get%20Big/images/footer-icon.png);
}

